<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>13</source>
                    <target>13</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <parent>
		<groupId>com.siriusxi.ms.store</groupId>
		<artifactId>store-chassis</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	
	<artifactId>recommendation-service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Recommendation Service</name>
	<description>Recommendation Service Spring Boot based project</description>

</project>
